--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -122,3 +122,100 @@ p.area{
    font-size: 22px;
    color: #ccc;
  }
+ .panel-layout{
+   display: table;
+   margin: 0 0 20px;
+   table-layout: fixed;
+   width: 100%;
+   .panel-box{
+     display: table-cell;
+     float: none !important;
+     padding: 0 !important;
+     table-layout: fixed;
+     background: #fff none repeat scroll 0 0;
+      border-color: #3244a8;
+      color: #fff;
+      .panel-content{
+        border-width: 1px 0 0 1px;
+        border-bottom-left-radius: 0;
+         border-bottom-right-radius: 0;
+         border-top-right-radius: 0;
+      }
+      .panel-box.bg-default, .panel-box.bg-gray, .panel-box.bg-white, .panel-content.bg-default, .panel-content.bg-gray, .panel-content.bg-white{
+            border-style: solid;
+      }
+
+   }
+   .counter-box{
+     padding: 20px !important;
+     background-color: #689f38 !important;
+     text-align: center;
+     i.medium{
+       font-size: 1.5rem !important;
+     };
+     font-size: 1.0rem !important
+   }
+ }
+.repo-show{
+  margin-top: 20px;
+}
+.poc-img-show-box{
+
+}
+.panel-content{
+  img{
+    width: 100%;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+}
+.para-text{
+  color: #141c22 !important;
+  font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 300;
+  margin-bottom: 0px !important
+}
+.poc-desc{
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  text-align: justify;
+  padding: 0px 20px 0px 20px;
+
+}
+.testimonial-author{
+  margin-top: 20px !important;
+  overflow: hidden;
+  b{
+    display: block;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 6px 0 0;
+  }
+  span{
+    text-transform: uppercase;
+  }
+
+}
+.auth-img{
+  margin: 0 25px 0 0px !important;
+  float: left !important;
+  width: 60px !important;
+  border-radius: 6px !important;
+  text-align: right !important;
+}
+.download-links{
+  color: #000 !important;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  a{
+    min-width: 30%;
+    min-height: 50px;
+    color: #689f38 !important;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 2.6
+  }
+}
