--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -144,7 +144,6 @@ p.area{
       .panel-box.bg-default, .panel-box.bg-gray, .panel-box.bg-white, .panel-content.bg-default, .panel-content.bg-gray, .panel-content.bg-white{
             border-style: solid;
       }
-
    }
    .counter-box{
      padding: 20px !important;
@@ -206,16 +205,139 @@ p.area{
 }
 .download-links{
   color: #000 !important;
-  text-align: center;
+  text-align: left;
   padding: 10px 10px 10px 10px;
   a{
     min-width: 30%;
     min-height: 50px;
     color: #689f38 !important;
-    font-weight: bold;
     font-size: 18px;
     text-align: center;
     vertical-align: middle;
-    line-height: 2.6
+    line-height: 2.6;
+    margin-left: 10px
+  }
+  i{
+    color: #689f38 !important;
+    font-size: 1.5rem !important;
   }
 }
+.poc_form{
+    padding: 20px !important;
+    button{
+      background-color: #7CB342;
+     float: right;
+     margin-right: 40%;
+    }
+    button:hover{
+      background-color: #689f38;
+    }
+    button:focus{
+      background-color: #689f38;
+    }
+    textarea{
+      height: 100px !important
+    }
+}
+.hovereffect {
+  width: 280px;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+  background: #7CB342 !important;
+}
+
+.hovereffect .overlay {
+  width: 300px;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  padding: 50px 20px;
+}
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: 300px;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.hovereffect:hover img {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 0.5em 0;
+  background-color: transparent;
+}
+
+.hovereffect h2:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 300px;
+  height: 2px;
+  background: #fff;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
+}
+
+.hovereffect:hover h2:after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect a, .hovereffect p {
+  color: #FFF;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%,0,0);
+  transform: translate3d(100%,0,0);
+}
+
+.hovereffect:hover a, .hovereffect:hover p {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+.chip{
+  margin-left: 5px;
+}
+.poc_desc_text_area{
+  height: 100px;
+}
+textarea:focus, .input:focus {
+  border-bottom: 1px solid #7CB342 !important;
+  -webkit-box-shadow: 0 1px 0 0 #7CB342 !important;
+  -moz-box-shadow: 0 1px 0 0 #7CB342 !important;
+  box-shadow: 0 1px 0 0 #7CB342 !important;
+}
+textarea:focus + label {
+    color: #7CB342 !important;
+  }
